Fix header again
Add perma scroll, remove header row/col doesn't play well mobile rez creates horizontal scroll :(

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html {
     height:  100%;
     scroll-behavior: smooth;
     scroll-padding-top: 100px; /* Allow buffer so we don't scroll anchor links behind navbar */
+    overflow-y: scroll;
 }
 body {
     background-color: rgba(16, 64, 13, 1);
@@ -12,7 +13,7 @@ body {
     background-size: cover !important;
     position: fixed;
     height: 100vh;
-    width: 100vw;
+    width: 99.5vw; /* Adjust for perma-scroll */
 }
 .bg-color {
     background-color: rgba(16, 64, 13, 0.5);
